--- a/src/JsonDocumentSelect/JsonDocumentSelect.csproj
+++ b/src/JsonDocumentSelect/JsonDocumentSelect.csproj
@@ -1,6 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
     <TargetFrameworks>net6.0</TargetFrameworks>
+	<PackageVersion>1.0.0</PackageVersion>
+	<AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
 	<Authors>Feiqi Yu</Authors>
     <Product>JsonDocumentSelect</Product>
     <Description>JsonDocumentSelect is a class library to extract elements from JSON with single line expressions</Description>
